feat: bridge production classpath transitions through search proofs